echarts  mostly over

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									<span>8</span>
 									<span>7</span>
 								</p>
-								<ul class="data">
+								<!-- <ul class="data">
 									<li>
 										<p>
 											<i class="yellow"></i>43个</p>
@@ -115,7 +115,7 @@
 											<i class="blue"></i>143个</p>
 										<span>数据服务</span>
 									</li>
-								</ul>
+								</ul> -->
 							</div>
 						</div>
 					</div>
@@ -640,15 +640,13 @@
 					<div class="noise-left">
 						<div class="main-info-module">
 							<div class="mim-title">
-								<p class="title">水环境月度总体概况</p>
+								<p class="title">交通噪音统计</p>
 								<p class="time">统计时间：2017年</p>
 							</div>
 							<div class="noise-info1 flexBlock">
 								<div class="pieTu_con flex1">
-									<div class="pieTu_con_center">
-										<div class="CompRateCanvas" id="CompRateCanvas021"></div>
-										
-									</div>
+									<div class="orangeback"></div>
+									<div class="noise-echarts1" id="noise-echarts1"></div>
 								</div>
 								<div class="rightDes ">
 									<dl class="noiseList">
@@ -680,7 +678,7 @@
 								<p class="time">统计时间：2017年</p>
 							</div>
 							<div class="noise-info2 flexBlock">
-
+								<div class="noise-echarts2" id="noise-echarts2"></div>
 							</div>
 						</div>
 					</div>
@@ -693,7 +691,7 @@
 								<p class="time">统计时间：2018年第一季度</p>
 							</div>
 							<div class="noise-info3">
-								<div class="noise-echarts2" id="noise-echarts2">
+								<div class="noise-echarts3" id="noise-echarts3">
 
 								</div>
 							</div>
