--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" charset="utf-8">
-	<title>宜昌市环保大数据中心</title>
+	<title>徐州市环保大数据中心</title>
 	<link rel="stylesheet" href="css/index.css" />
 	<link rel="stylesheet" href="css/indexPlus.css" />
 </head>
@@ -11,7 +11,7 @@
 <body>
 	<div class="header">
 		<p class="logo">
-			<img src="images/logo.png" />宜昌市环保大数据中心
+			<img src="images/logo.png" />徐州市环保大数据中心
 		</p>
 		<div class="nav">
 			<ul>
@@ -527,7 +527,7 @@
 										<li>O3</li>
 									</ul>
 									<br>
-									<ul class="air-info-tab flexBlock air-info-tab2">
+									<ul class="flexBlock air-info-type">
 										<li class="active">同比</li>
 										<li>环比</li>
 									</ul>
@@ -542,6 +542,15 @@
 									</div>
 									<div class="air-info-tab-main" style="display: none;">
 										<div class="air-echarts1" id="air-echarts4"></div>
+									</div>
+									<div class="air-info-tab-main" style="display: none;">
+										<div class="air-echarts1" id="air-echarts5"></div>
+									</div>
+									<div class="air-info-tab-main" style="display: none;">
+										<div class="air-echarts1" id="air-echarts6"></div>
+									</div>
+									<div class="air-info-tab-main" style="display: none;">
+										<div class="air-echarts1" id="air-echarts7"></div>
 									</div>
 								</div>
 								<div class="right_des">
@@ -647,6 +656,10 @@
 								<div class="pieTu_con flex1">
 									<div class="orangeback"></div>
 									<div class="noise-echarts1" id="noise-echarts1"></div>
+									<div class="valueCon">
+										<p class="valueText">64.8dB</p>
+										<p class="valueDes">平均等效声级</p>
+									</div>
 								</div>
 								<div class="rightDes ">
 									<dl class="noiseList">
@@ -842,13 +855,13 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="js/echarts.min.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 	<script type="text/javascript" src="js/index-situation.js"></script>
 	<script type="text/javascript" src="js/index-air.js"></script>
 	<script type="text/javascript" src="js/index-water.js"></script>
 	<script type="text/javascript" src="js/index-noise.js"></script>
 	<script type="text/javascript" src="js/index-pollution.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
