--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" charset="utf-8">
 	<title>徐州市环保大数据中心</title>
 	<link rel="stylesheet" href="css/index.css" />
-	<link rel="stylesheet" href="css/indexPlus.css" />
+	<link rel="stylesheet" href="css/index-plus.css" />
 </head>
 
-<body>
+<body class="body1">
 	<div class="header">
 		<p class="logo">
 			<img src="images/logo.png" />徐州市环保大数据中心
@@ -610,7 +610,7 @@
 							<div class="water-info2 flexBlock">
 								<div class="pieTu_con flex1">
 									<div class="pieTu_con_center">
-										<div class="CompRateCanvas" id="CompRateCanvas021"></div>
+										<div class="CompRateCanvas" id="CompRateCanvas21"></div>
 										<p class="PieTuDes">地表水达标率：85%</p>
 										<p class="PieTuDes">与去年同比下降
 											<i class="icon downIcon"></i>15%</p>
@@ -619,7 +619,7 @@
 								</div>
 								<div class="pieTu_con flex1">
 									<div class="pieTu_con_center">
-										<div class="CompRateCanvas" id="CompRateCanvas022"></div>
+										<div class="CompRateCanvas" id="CompRateCanvas22"></div>
 										<p class="PieTuDes">饮用水达标率：100%</p>
 										<p class="PieTuDes">与去年同比持平</p>
 									</div>
