index 根据需求更改完成

--- a/index.html
+++ b/index.html
@@ -635,8 +635,9 @@
 								<p class="title">监测河流水质现状</p>
 								<p class="time">统计月份：2018.5</p>
 							</div>
-							<div class="water-info3">
-								<div class="water-echarts2" id="water-echarts2">
+							<div class="water-info3 flexBlock">
+								<div class="water-echarts2 flex1" id="water-echarts2"></div>
+								<div class="water-echarts3 flex1" id="water-echarts3">
 
 								</div>
 							</div>
@@ -817,7 +818,7 @@
 					<div class="pollution-right pollution-bottom">
 						<div class="main-info-module">
 							<div class="mim-title">
-								<p class="title">在线监控污染源</p>
+								<p class="title">在线监控污染源超标统计</p>
 							</div>
 							<div class="pollution-info pollution-info4">
 								<ul class="data">
