map 根据需求改完

--- a/map.html
+++ b/map.html
@@ -296,73 +296,22 @@
 						<p class="title">图例</p>
 						<ul>
 							<li>
-								<p>废气在线
-									<img src="images/map/legend/1-1.png" />
-								</p>
-								<p>废气离线
-									<img src="images/map/legend/1-2.png" />
-								</p>
-								<p>废气超标
-									<img src="images/map/legend/1-3.png" />
-								</p>
-								<p>废水在线
-									<img src="images/map/legend/1-4.png" />
-								</p>
-								<p>废水离线
-									<img src="images/map/legend/1-5.png" />
-								</p>
-								<p>废水超标
-									<img src="images/map/legend/1-6.png" />
-								</p>
-								<p>关停企业
-									<img src="images/map/legend/1-7.png" />
-								</p>
+								<p><span class="sectionMark contLevel">国</span>国控站点</p>
+								<p><span class="sectionMark provLevel">省</span>省控站点</p>
+								<p><span class="sectionMark cityLevel">市</span>市控站点</p>
+								<p><span class="pollMark oneLevel"></span>优</p>
+								<p><span class="pollMark twoLevel"></span>良</p>
+								<p><span class="pollMark threeLevel"></span>轻度污染</p>
+								<p><span class="pollMark fourLevel"></span>中度污染</p>
+								<p><span class="pollMark fiveLevel"></span>重度污染</p>
+								<p><span class="pollMark sixLevel"></span>严重污染</p>
 							</li>
-							<li>
-								<p>优
-									<img src="images/map/legend/2-1.png" />
-								</p>
-								<p>良
-									<img src="images/map/legend/2-2.png" />
-								</p>
-								<p>轻度污染
-									<img src="images/map/legend/2-3.png" />
-								</p>
-								<p>中度污染
-									<img src="images/map/legend/2-4.png" />
-								</p>
-								<p>重度污染
-									<img src="images/map/legend/2-5.png" />
-								</p>
-								<p>严重污染
-									<img src="images/map/legend/2-6.png" />
-								</p>
-							</li>
-							<li>
-								<p>Ⅰ类
-									<img src="images/map/legend/3-1.png" />
-								</p>
-								<p>Ⅱ类
-									<img src="images/map/legend/3-2.png" />
-								</p>
-								<p>Ⅲ类
-									<img src="images/map/legend/3-3.png" />
-								</p>
-								<p>Ⅳ类
-									<img src="images/map/legend/3-4.png" />
-								</p>
-								<p>Ⅴ类
-									<img src="images/map/legend/3-5.png" />
-								</p>
-								<p>劣Ⅴ类
-									<img src="images/map/legend/3-6.png" />
-								</p>
-							</li>
+
 						</ul>
 					</div>
 				</li>
 			</ul>
-			
+
 		</div>
 		<div class="map-info-show"></div>
 		<div class="map-info">
@@ -483,7 +432,14 @@
 					<table class="tab-body" cellpadding="0" cellspacing="0">
 						<thead>
 							<tr>
-								<td class="td1">排名</td>
+								<td class="td1">排名
+									<span class="TableIconBox">
+										<div class="P6ArrowIcon triangle_border_up">
+										</div>
+										<div class="P6ArrowIcon triangle_border_down active">
+										</div>
+									</span>
+								</td>
 								<td class="td2">测点</td>
 								<td class="td3">AQI</td>
 								<td class="td4">首要污染物</td>
@@ -728,7 +684,7 @@
 	</div>
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/echarts.min.js"></script>
-	<script src="js/My97DatePicker/WdatePicker.js"></script>
+	<!-- <script src="js/My97DatePicker/WdatePicker.js"></script> -->
 	<script src="js/map.js"></script>
 </body>
 
