--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<p class="logo">
 			<img src="images/logo.png" />徐州市环保大数据中心
 		</p>
+		<!-- 头部导航 -->
 		<div class="nav">
 			<ul>
 				<li class="navLi active">
@@ -61,6 +62,7 @@
 		</div>
 	</div>
 	<div class="index-main">
+		<!-- 内容列表tab -->
 		<div class="index-main-tab">
 			<dl class="active">
 				<dt class="icon1"></dt>
@@ -84,6 +86,7 @@
 			</dl>
 		</div>
 		<div class="index-main-info">
+			<!-- 数据概览 对应content -->
 			<div class="main-info">
 				<div class="clear">
 					<div class="situation-left">
@@ -266,6 +269,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- 空气环境质量 对应content -->
 			<div class="main-info" style="display: none;">
 				<div class="clear">
 					<div class="air-left">
@@ -273,10 +277,7 @@
 							<div class="air-info1">
 								<div class="left">
 									<div class="air-info flexBlock">
-
 										<div class="num rank2 " id='air-radio-canvas'>
-
-
 										</div>
 										<p class="canvasFont">AQI</p>
 										<div class="word">
@@ -321,6 +322,7 @@
 									</ul>
 								</div>
 								<div class="map">
+									<!-- 图例 start -->
 									<div class="map-legend">
 										<p class="title">图例</p>
 										<ul>
@@ -350,6 +352,7 @@
 											</li>
 										</ul>
 									</div>
+									<!-- 图例 end -->
 								</div>
 							</div>
 						</div>
@@ -577,6 +580,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- 水环境质量 对应content -->
 			<div class="main-info" style="display: none;">
 				<div class="clear">
 					<div class="water-left">
@@ -645,6 +649,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- 声环境质量 对应content -->			
 			<div class="main-info" style="display: none;">
 				<div class="clear">
 					<div class="noise-left">
@@ -713,6 +718,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- 污染源 对应content -->	
 			<div class="main-info" style="display: none;">
 				<div class="clear">
 					<div class="pollution-left">
